--- a/dj_tasks/app_queue/templates/gui/home.html
+++ b/dj_tasks/app_queue/templates/gui/home.html
@@ -18,9 +18,7 @@
     <hr><br><br>
 
 
-    <a href="/">Go Home </a> <br>
-    <a href="/create_task">Create Task </a> <br>
-    <a href="/">My Task list</a> <br>
+    <a href="/create_task"   >Create Task         </a> <br><br>
     <a href="/get_queue_list">get tasks from Queue</a> <br>
     
 
